syntax = "proto3";

package bs_rag;

option go_package = "./bs_rag";

// ====== 消息定义 ======

// 向量查询请求
message VectorSearchRequest {
  repeated float query_vector = 1;        // 查询向量
  int32 top_k = 2;                       // 返回最相似的k个结果
  float min_score = 3;                   // 最小相似度阈值
  string collection_name = 4;            // 集合名称
  map<string, string> filters = 5;       // 过滤条件
  string user_id = 6;                    // 用户ID
}

// 向量搜索结果
message VectorSearchResult {
  string id = 1;                         // 文档ID
  repeated float vector = 2;             // 向量
  float score = 3;                       // 相似度分数
  map<string, string> metadata = 4;      // 元数据
  string content = 5;                    // 文档内容
}

// 向量查询响应
message VectorSearchResponse {
  repeated VectorSearchResult results = 1;  // 搜索结果列表
  int32 total_count = 2;                    // 总结果数
  float search_time_ms = 3;                 // 搜索耗时(毫秒)
}

// 向量插入请求
message VectorInsertRequest {
  string collection_name = 1;            // 集合名称
  repeated VectorDocument documents = 2; // 要插入的文档列表
  string user_id = 3;                    // 用户ID
}

// 向量文档
message VectorDocument {
  string id = 1;                         // 文档ID
  repeated float vector = 2;             // 向量
  map<string, string> metadata = 3;      // 元数据
  string content = 4;                    // 文档内容
}

// 向量插入响应
message VectorInsertResponse {
  int32 inserted_count = 1;              // 成功插入的文档数
  repeated string inserted_ids = 2;      // 插入的文档ID列表
  string error_message = 3;              // 错误信息(如果有)
}

// 向量删除请求
message VectorDeleteRequest {
  string collection_name = 1;            // 集合名称
  repeated string document_ids = 2;      // 要删除的文档ID列表
  string user_id = 3;                    // 用户ID
}

// 向量删除响应
message VectorDeleteResponse {
  int32 deleted_count = 1;               // 成功删除的文档数
  repeated string deleted_ids = 2;       // 删除的文档ID列表
  string error_message = 3;              // 错误信息(如果有)
}

// 集合信息请求
message CollectionInfoRequest {
  string collection_name = 1;            // 集合名称
  string user_id = 2;                    // 用户ID
}

// 集合信息响应
message CollectionInfoResponse {
  string collection_name = 1;            // 集合名称
  int32 document_count = 2;              // 文档数量
  int32 vector_dimension = 3;            // 向量维度
  string index_type = 4;                 // 索引类型
  bool exists = 5;                       // 集合是否存在
  string error_message = 6;              // 错误信息(如果有)
}

// ====== 服务定义 ======

service BsRagService {
  // 向量相似度搜索
  rpc VectorSearch(VectorSearchRequest) returns (VectorSearchResponse);
  
  // 插入向量文档
  rpc VectorInsert(VectorInsertRequest) returns (VectorInsertResponse);
  
  // 删除向量文档
  rpc VectorDelete(VectorDeleteRequest) returns (VectorDeleteResponse);
  
  // 获取集合信息
  rpc GetCollectionInfo(CollectionInfoRequest) returns (CollectionInfoResponse);
}
